--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guess card - Game</title>
+    <title>Card Guess - Game</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -16,7 +16,7 @@
 
     <!-- gamepad -->
     <div class="container">
-      <h1>Guess Card Game</h1>
+      <h1>Card Guess Game</h1>
       <div class="score-board" >Score: <span class="score" id="score">0</span></div>
 
       <div class="card-container">
